--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@angular/http": "2.0.0-rc.3",
     "@angular/platform-browser": "2.0.0-rc.3",
     "@angular/platform-browser-dynamic": "2.0.0-rc.3",
-    "es6-shim": "^0.35.0",
+    "es6-shim": "^0.35.0",    
+    "angularfire2": "^2.0.0-beta.2",
     "firebase": "^3.2.0",
     "ionic-angular": "2.0.0-beta.10",
     "ionic-native": "1.3.2",
